--- a/CSS/Secret.css
+++ b/CSS/Secret.css
@@ -4,6 +4,7 @@ body{
 	
 }
 .container{
+	width: 800px;
 	font-size: 20px;
 	text-shadow: 2px 2px 5px gray;
 	text-align: center;
@@ -14,8 +15,9 @@ h2{
 	
 }
 #right{
+	width: 200px;
 	float: right;
 }
 #left{
-	float: left;
+	width: 200px;
 }
