--- a/CSS/Top.css
+++ b/CSS/Top.css
@@ -7,6 +7,7 @@ body{
 	font-size: 22px;
 	margin-right:auto;
 	margin-left: auto;
+
 	}
 	
 #Sidebar{
@@ -17,7 +18,7 @@ body{
 	margin-right: 5px;
 	float: left;
 	border-right:solid;
-	border-right-width: 2px;
+	border-right-width: 0px;
 	border-color: #BAD7B6;	
 	padding-right: 3px;
 	z-index: 1;
@@ -53,7 +54,7 @@ body{
 	border-right-color: #AAAAAA;
 	border-bottom-color: #AAAAAA;
 	padding-left: 8px;
-	background-color:white;	
+	background-image : url(../img/column-box-bottom.jpg)	
 	}
 #SidePoint{
 	text-align: center;
@@ -71,7 +72,7 @@ body{
 	border-right-color: #AAAAAA;
 	border-bottom-color: #AAAAAA;
 	padding-left: 8px;
-	background-color:white;	
+	background-image : url(../img/column-box-bottom.jpg)	
 }
 #SideContent2{
 	width: 184px;
@@ -99,7 +100,7 @@ body{
 	border-right-color: #AAAAAA;
 	border-bottom-color: #AAAAAA;
 	padding-left: 8px;
-	background-color:white;	
+	background-image : url(../img/column-box-bottom.jpg)	
 
 }
 #SideAnswer{	
@@ -118,7 +119,7 @@ body{
 	border-right-color: #AAAAAA;
 	border-bottom-color: #AAAAAA;
 	padding-left: 8px;
-	background-color:white;	
+	background-image : url(../img/column-box-bottom.jpg)	
 
 }
 #SideContent3{
@@ -147,7 +148,7 @@ body{
 	border-right-color: #AAAAAA;
 	border-bottom-color: #AAAAAA;
 	padding-left: 8px;
-	background-color:white;	
+	background-image : url(../img/column-box-bottom.jpg)	
 }
 
 #SideAbroad{
@@ -166,7 +167,7 @@ body{
 	border-right-color: #AAAAAA;
 	border-bottom-color: #AAAAAA;
 	padding-left: 8px;
-	background-color:white;	
+	background-image : url(../img/column-box-bottom.jpg)	
 }
 #SideCircle{
 	text-align: center;
@@ -184,7 +185,7 @@ body{
 	border-right-color: #AAAAAA;
 	border-bottom-color: #AAAAAA;
 	padding-left: 8px;
-	background-color:white;	
+	background-image : url(../img/column-box-bottom.jpg)	
 }
 #SideNewProject{
 	text-align: center;
@@ -202,7 +203,7 @@ body{
 	border-right-color: #AAAAAA;
 	border-bottom-color: #AAAAAA;
 	padding-left: 8px;
-	background-color:white;	
+	background-image : url(../img/column-box-bottom.jpg)	
 }
 #SideContent4{
 	width: 184px;
@@ -230,7 +231,7 @@ body{
 	border-right-color: #AAAAAA;
 	border-bottom-color: #AAAAAA;
 	padding-left: 8px;
-	background-color:white;	
+	background-image : url(../img/column-box-bottom.jpg)	
 
 }
 #SideBeginner{
@@ -249,7 +250,7 @@ body{
 	border-right-color: #AAAAAA;
 	border-bottom-color: #AAAAAA;
 	padding-left: 8px;
-	background-color:white;	
+	background-image : url(../img/column-box-bottom.jpg)	
 
 }
 #SideOpinion{
@@ -268,7 +269,7 @@ body{
 	border-right-color: #AAAAAA;
 	border-bottom-color: #AAAAAA;
 	padding-left: 8px;
-	background-color:white;	
+	background-image : url(../img/column-box-bottom.jpg)	
 
 }
 #SideLogout{
@@ -287,7 +288,7 @@ body{
 	border-right-color: #AAAAAA;
 	border-bottom-color: #AAAAAA;
 	padding-left: 8px;
-	background-color:white;	
+	background-image : url(../img/column-box-bottom.jpg)	
 
 } 
 /*Topのメインコンテンツ*/
@@ -840,40 +841,55 @@ td{
 	top: 160px;
 	opacity: 0.7;
 	position: fixed;
+	box-shadow: 2px 2px 5px black;
 	
 }
 .ClubCircleListTitle{
 	margin-top: 30px;
-	margin-bottom: 30px;
+	margin-bottom: 0px;
 }
 .ClubCircleName{
 	color: white;
-	font-size: 40px;
+	font-size: 50px;
 	text-shadow: 2px 2px 3px black;
 	position: relative;
 	z-index: 3;
-	top:-123px;
-	left: 15px;
+	top:-153px;
+	left: 30px;
 	margin-bottom: -70px;
 }
 .ClubCircleListContent{
+	width:530px;
+	margin-top: 30px;
 	margin-bottom: -80px;
+}
+.ClubCircleListCategorySet{
+	width: 530px;
+	box-shadow: 2px 2px 5px gray;
+	background-image: url(../img/column-box-bottom.jpg);
 }
 .ClubCircleListCategory{
 	color: white;
+	font-size: 25px;
 	text-shadow: 2px 2px 3px black;
 	position: relative;
 	z-index: 3;
-	top:-73px;
+	top:-90px;
 	left: 10px;
 }
 .ClubCircleListCategoryimg{
+	width: 300px;
+	height: 60px;
+	position: relative;
+	left: -10px;
+	top:-10px;
 	box-shadow: 2px 2px 5px gray;
 }
 .ClubCircleListDifferent{
+	width: 500px;
 	font-size: 20px;
 	position: relative;
-	top:-73px;
+	top:-63px;
 	left: 10px;
 
 }
