--- a/CSS/login.css
+++ b/CSS/login.css
@@ -1,7 +1,9 @@
-@charset"UTF-8"
 body{   
 	font-size: larger;
-	font-family: 'Osaka',serif;
+	text-shadow: 2px 2px 5px black;
+	background-image : url(../img/back2.jpg);
+	background-size: 3000px;
+
 }
 .container{ 
 	width: 900px;
@@ -16,13 +18,13 @@ body{
 	margin-top: 45px;
 	margin-left: auto;
 	margin-right: auto;
-	
 }
 #logo{
+
 }
 
 #IDPass{
-	width: 380px;
+	width: 450px;
 	margin-left: auto;
 	margin-right: auto;
 	
@@ -31,9 +33,11 @@ body{
 #textarea{
 	width: 260px;
 	float: left;	
+	
 	}
 #login{
 	width: 100px;
+	position: relative;
 	float: right;
 	margin-top: 7px;
 	}
@@ -56,3 +60,54 @@ body{
 a{
 	color: black;
 }
+
+/*login Rule Start*/
+#RuleTitle{
+	color: white;
+	font-size: 40px;
+	text-align: center;
+	margin-top: 30px;
+	margin-right: auto;
+	margin-left: auto;
+	width: 600px;
+	background-image: url(../img/CircleImg/sky/sky_s1.png);
+	box-shadow: 2px 2px 5px gray;
+}
+#RuleContent{
+	text-shadow: 2px 2px 5px gray;
+	font-size: 20px;
+	width: 800px;
+	margin-top: 20px;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 10px;
+	background-image: url(../img/column-box-bottom.jpg);
+	box-shadow: 2px 2px 5px gray;
+}
+#RuleQuestionaire{
+
+}
+#RuleOpenInfoManage{
+	
+}
+#RuleAccountManage{
+	
+}
+.RuleContentTitles{
+	color: white;
+	background-color: #f88221;
+	width: 300px;
+	text-align: center;
+	box-shadow: 2px 2px 5px gray;
+	font-size: 25px;
+	text-shadow: 2px 2px 5px gray;
+
+}
+.back{
+	width: 600px;
+	margin-left: auto;
+	margin-right:auto;
+	text-align: center;
+	margin-top: 30px;
+}
+/*login Rule End*/
