--- a/CSS/Top.css
+++ b/CSS/Top.css
@@ -214,11 +214,14 @@ A:hover { text-decoration:none; color:black; }
 }
 .DecoUp{
 	color: white;
+	text-align: center;
+	padding: 5px;
 	width: 200px;
 	height: 30px;
 	background-image: url(../img/sub-navigation.jpg);
 	position: relative;
 	top: 30px;
+	box-shadow: 2px 2px 5px gray;
 }
 #file{
 	position: absolute;
@@ -722,10 +725,22 @@ td{
 
 /*ClubCircleList Start*/
 .ClubCircleList{
-	width: 500px;
-	border: solid;
-	border-width: 0px;
-	
+	width: 500px;	
+}
+.AnswerBox{
+	text-align: center;
+	width: 400px;
+	height: 100px;
+	position: relative;
+	left: 650px;
+	top:-130px;
+	background-image: url(../img/);
+}
+#uploadimg{
+	width:200px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 20px;
 }
 .ClubCircleImg{
 	width: 510px;
@@ -741,7 +756,7 @@ td{
 }
 .ClubCircleListTitle{
 	margin-top: 30px;
-	margin-bottom: 0px;
+	margin-bottom: -100px;
 }
 .ClubCircleName{
 	color: white;
