--- a/CSS/login.css
+++ b/CSS/login.css
@@ -111,3 +111,125 @@ a{
 	margin-top: 30px;
 }
 /*login Rule End*/
+
+/*Beginner Start*/
+#BeginnerTitle{
+	color: white;
+	font-size: 40px;
+	text-align: center;
+	padding: 10px;
+	margin-top: 30px;
+	margin-right: auto;
+	margin-left: auto;
+	width: 600px;
+	background-image: url(../img/CircleImg/sky/sky_s1.png);
+	box-shadow: 2px 2px 5px gray;
+}
+#BeginnerContent{
+	text-shadow: 2px 2px 5px gray;
+	font-size: 20px;
+	width: 800px;
+	margin-top: 20px;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 10px;
+	background-image: url(../img/cbb2.jpg);
+	box-shadow: 2px 2px 5px gray;
+}
+.BeginnerContentTitles{
+	color: white;
+	background-color: #f88221;
+	width: 300px;
+	text-align: center;
+	box-shadow: 2px 2px 5px gray;
+	font-size: 25px;
+	text-shadow: 2px 2px 5px gray;
+
+}
+.back{
+	width: 600px;
+	margin-left: auto;
+	margin-right:auto;
+	text-align: center;
+	margin-top: 30px;
+}
+/*Beginner End*/
+
+/*CA Start*/
+#CATitle{
+	color: white;
+	font-size: 40px;
+	text-align: center;
+	padding: 10px;
+	margin-top: 30px;
+	margin-right: auto;
+	margin-left: auto;
+	width: 600px;
+	background-image: url(../img/CircleImg/sky/sky_s1.png);
+	box-shadow: 2px 2px 5px gray;
+}
+#CAContent{
+	text-shadow: 2px 2px 5px gray;
+	font-size: 25px;
+	width: 800px;
+	margin-top: 20px;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 10px;
+	background-image: url(../img/cbb2.jpg);
+	box-shadow: 2px 2px 5px gray;
+}
+.inputdes{
+	width: 500px;
+	margin-left: auto;
+	margin-right: auto;
+	color: white;
+	padding: 10px;
+	background-image:url(../img/CircleImg/sky/sky_s1.png);
+	border: 0px;
+	text-shadow: 2px 2px 3px black;
+
+}
+.inputbox{
+	width: 500px;
+	margin-left: auto;
+	margin-right: auto;
+	font-size: 20px;
+	color: black;
+	padding:10px;
+}
+.textarea{
+	font-size: 15px;
+}
+#ReadMe{
+	font-size: 30px;
+	color: #f70606;
+	font-family: monospace;
+}
+/*CA End*/
+/*CAfinish Start*/
+#CAfinishTitle{
+	color: white;
+	font-size: 40px;
+	text-align: center;
+	padding: 10px;
+	margin-top: 30px;
+	margin-right: auto;
+	margin-left: auto;
+	width: 500px;
+	background-image: url(../img/CircleImg/sky/sky_s1.png);
+	box-shadow: 2px 2px 5px gray;
+}
+#CAfinishContent{
+	text-align: center;
+	text-shadow: 2px 2px 5px gray;
+	font-size: 25px;
+	width: 700px;
+	margin-top: 20px;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 10px;
+	background-image: url(../img/cbb2.jpg);
+	box-shadow: 2px 2px 5px gray;
+}
+/*CAfinish End*/
