--- a/CSS/Top.css
+++ b/CSS/Top.css
@@ -775,6 +775,77 @@ td{
 #uniA149{position:absolute; left:0px; top:0px;}
 /*uniiconlist End*/
 
+/*AbroadTips Start*/
+#Abroaduploadimg{
+	width:200px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 20px;
+}
+.AbroadImg{
+	width: 510px;
+	height: 340px;
+	margin-top: 50px;
+	position: absolute;
+	z-index: -1;
+	left:820px;
+	top: 160px;
+	position: fixed;
+	box-shadow: 2px 2px 5px black;
+	
+}
+.AbroadListTitle{
+	margin-top: 30px;
+	margin-bottom: -100px;
+}
+.AbroadName{
+	color: white;
+	font-size: 50px;
+	text-shadow: 2px 2px 3px black;
+	position: relative;
+	z-index: 3;
+	top:-163px;
+	left: 30px;
+	margin-bottom: -90px;
+}
+.AbroadListContent{
+	width:530px;
+	margin-top: 30px;
+	margin-bottom: -80px;
+}
+.AbroadListCategorySet{
+	width: 900px;
+	box-shadow: 2px 2px 5px gray;
+	background-image: url(../img/cbb2.jpg);
+}
+.AbroadListCategory{
+	color: white;
+	font-size: 25px;
+	text-shadow: 2px 2px 3px black;
+	position: relative;
+	z-index: 3;
+	top:-90px;
+	left: 10px;
+}
+.AbroadListCategoryimg{
+	width: 300px;
+	height: 60px;
+	position: relative;
+	left: -10px;
+	top:-10px;
+	box-shadow: 2px 2px 5px gray;
+}
+.AbroadListDifferent{
+	width: 500px;
+	font-size: 20px;
+	position: relative;
+	top:-63px;
+	left: 10px;
+
+}
+
+/*AbroadTips End*/
+
 /*Abroad End*/
 
 /*Circles start*/
@@ -820,7 +891,6 @@ td{
 	position: relative;
 	left: 650px;
 	top:-130px;
-	background-image: url(../img/);
 }
 #uploadimg{
 	width:200px;
