--- a/CSS/Top.css
+++ b/CSS/Top.css
@@ -270,7 +270,7 @@ td{
 	border-right-color: #AAAAAA;
 	border-bottom-color: #ef741b;
 	padding-left: 8px;
-	float: left;
+	float:right;
 	background-image: url(../img/body.png);
 	background-size: 450px;
 
@@ -348,7 +348,7 @@ td{
 	width: 442px;
 	margin-top: 30px;
 	margin-left: 30px;
-	margin-right: 3px;
+	margin-right: 0px;
 	border: solid;
 	border-left-width: 0px;
 	border-left-color: #ef741b;
@@ -402,7 +402,7 @@ td{
 	border-right-color: #080880;
 	border-bottom-color: #ef741b;
 	padding-left: 8px;
-	float: left;
+	float: right;
 	background-image: url(../img/footer-quick-links-bottom.png);
 	background-repeat: no-repeat;
 	background-size: 450px;
@@ -431,6 +431,394 @@ td{
 /*Mypage End*/
 
 /*Answer Start*/
+#TopHead{
+	width: 650px;
+	font-size: 40px;
+	text-shadow: 2px 2px 5px gray;
+	color: white;
+	text-align: center;
+	border: groove;
+	border-top: 0px;
+	border-left: 0px;
+	border-right: 0px;
+	border-bottom-width: 2px;
+	border-bottom-color: gray;
+	margin-top: 10px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 0px;
+	padding: 10px;
+	background-color: #4b3423;	
+	box-shadow: 2px 2px 5px gray;
+}
+
+
+
+#TopClass{
+	text-align: center;
+	width: 190px;
+	height: 310px;
+	margin-top: 30px;
+	margin-left: 30px;
+	margin-right: 3px;
+	border: solid;
+	border-left-width: 0px;
+	border-left-color: #ef741b;
+	border-bottom-width: 0px;
+	border-right-width: 0px;
+	border-top-width: 0px;
+	border-top-color: #AAAAAA;
+	border-right-color: #080880;
+	border-bottom-color: #ef741b;
+	padding-left: 8px;
+	float: left;
+	background-image: url(../img/footer-quick-links-bottom.png);
+	background-size: 200px;
+	
+}
+#TopClassTitle{
+	width: 100px;
+	margin-left: auto;
+	margin-right: auto;
+	font-size: 30px;
+	color: white;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	border-bottom-style: dashed;
+	border-bottom-width: 3px;
+	border-color: gray;
+	color: #67462f;
+	text-shadow: 2px 2px 5px gray;
+}
+#TopClassContent{
+	margin-left: 10px;
+	margin-right: 10px;
+	text-align: left;
+}
+#TopBE{
+	text-align: center;
+	font-size: 25px;
+	color: #644229;
+	width: 50px;
+	height: 30px;
+	margin: 10px;
+	padding: 10px;
+	position: relative;
+	left: 40px;
+	text-shadow: 0px 0px 10px white;
+
+	
+}
+#TopGB{
+	text-align: center;
+	font-size: 25px;
+	color: #644229;
+	width: 50px;
+	height: 30px;
+	margin: 10px;
+	padding: 10px;
+	position: relative;
+	left: 40px;
+	text-shadow: 0px 0px 10px white;
+	}
+#TopGS{
+	text-align: center;
+	font-size: 25px;
+	color: #644229;
+	width: 50px;
+	height: 30px;
+	margin: 10px;
+	padding: 10px;
+	position: relative;
+	left: 40px;
+	text-shadow: 0px 0px 10px white;
+
+}
+#TopAbroad{
+	text-align: center;
+	width: 190px;
+	height: 310px;
+	margin-top: 30px;
+	margin-left: 30px;
+	margin-right: 3px;
+	border: solid;
+	border-left-width: 0px;
+	border-left-color: #ef741b;
+	border-bottom-width: 0px;
+	border-right-width: 0px;
+	border-top-width: 0px;
+	border-top-color: #AAAAAA;
+	border-right-color: #080880;
+	border-bottom-color: #ef741b;
+	padding-left: 8px;
+	float: left;
+	background-image: url(../img/footer-quick-links-bottom.png);
+	background-size: 200px;
+	
+}
+#TopAbroadTitle{
+	width: 100px;
+	margin-left: auto;
+	margin-right: auto;
+	font-size: 30px;
+	color: white;
+	margin-top: 20px;
+	margin-bottom: 5px;
+	border-bottom-style: dashed;
+	border-bottom-width: 3px;
+	border-color: gray;
+	color: #67462f;
+	text-shadow: 2px 2px 5px gray;
+}
+#TopAbroadContent{
+	margin-left: 10px;
+	margin-right: 10px;
+	text-align: left;
+}
+#TopEurope{
+	text-align: center;
+	font-size: 20px;
+	color: #644229;
+	width: 90px;
+	height: 28px;
+	margin: 0px;
+	padding: 5px;
+	position: relative;
+	left: 30px;
+	text-shadow: 0px 0px 10px white;
+
+	
+}
+#TopAfrica{
+	text-align: center;
+	font-size: 20px;
+	color: #644229;
+	width: 90px;
+	height: 28px;
+	margin: 0px;
+	padding: 5px;
+	position: relative;
+	left: 30px;
+	text-shadow: 0px 0px 10px white;
+	}
+#TopEastAsia{
+	text-align: center;
+	font-size: 20px;
+	color: #644229;
+	width: 90px;
+	height: 28px;
+	margin: 0px;
+	padding: 5px;
+	position: relative;
+	left: 30px;
+	text-shadow: 0px 0px 10px white;
+}
+#TopSEAO{
+	text-align: center;
+	font-size: 20px;
+	color: #644229;
+	width: 90px;
+	height: 28px;
+	margin: 0px;
+	padding: 5px;
+	position: relative;
+	left: 30px;
+	text-shadow: 0px 0px 10px white;
+}
+#TopNorthAmerica{
+	text-align: center;
+	font-size: 20px;
+	color: #644229;
+	width: 150px;
+	height: 28px;
+	margin: 0px;
+	padding: 5px;
+	position: relative;
+	left: 5px;
+	text-shadow: 0px 0px 10px white;
+}
+#TopSouthAmerica{
+	text-align: center;
+	font-size: 20px;
+	color: #644229;
+	width: 150px;
+	height: 28px;
+	margin: 0px;
+	padding: 5px;
+	position: relative;
+	left: 5px;
+	text-shadow: 0px 0px 10px white;
+}
+
+#TopCircle{
+	text-align: center;
+	width: 190px;
+	height: 310px;
+	margin-top: 30px;
+	margin-left: 30px;
+	margin-right: 3px;
+	border: solid;
+	border-left-width: 0px;
+	border-left-color: #ef741b;
+	border-bottom-width: 0px;
+	border-right-width: 0px;
+	border-top-width: 0px;
+	border-top-color: #AAAAAA;
+	border-right-color: #080880;
+	border-bottom-color: #ef741b;
+	padding-left: 8px;
+	float: left;
+	background-image: url(../img/footer-quick-links-bottom.png);
+	background-size: 200px;
+	
+}
+#TopCircleTitle{
+	width: 150px;
+	margin-left: auto;
+	margin-right: auto;
+	font-size: 30px;
+	color: white;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	border-bottom-style: dashed;
+	border-bottom-width: 3px;
+	border-color: gray;
+	color: #67462f;
+	text-shadow: 2px 2px 5px gray;
+}
+#TopCircleContent{
+	margin-left: 10px;
+	margin-right: 10px;
+	text-align: left;
+}
+#TopCulture{
+	text-align: center;
+	font-size: 20px;
+	color: #644229;
+	width: 130px;
+	height: 23px;
+	margin: 0px;
+	padding: 5px;
+	position: relative;
+	left: 20px;
+	text-shadow: 0px 0px 10px white;
+}
+#TopSports{
+	text-align: center;
+	font-size: 20px;
+	color: #644229;
+	width: 130px;
+	height: 23px;
+	margin: 0px;
+	padding: 5px;
+	position: relative;
+	left: 20px;
+	text-shadow: 0px 0px 10px white;
+}
+
+#TopNewProject{
+	text-align: center;
+	width: 190px;
+	height: 310px;
+	margin-top: 30px;
+	margin-left: 30px;
+	margin-right: 3px;
+	border: solid;
+	border-left-width: 0px;
+	border-left-color: #ef741b;
+	border-bottom-width: 0px;
+	border-right-width: 0px;
+	border-top-width: 0px;
+	border-top-color: #AAAAAA;
+	border-right-color: #080880;
+	border-bottom-color: #ef741b;
+	padding-left: 8px;
+	float: left;
+	background-image: url(../img/footer-quick-links-bottom.png);
+	background-size: 200px;
+	
+}
+#TopNewProjectTitle{
+	width: 150px;
+	margin-left: auto;
+	margin-right: auto;
+	font-size: 30px;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	border-bottom-style: dashed;
+	border-bottom-width: 3px;
+	border-color: gray;
+	color: #67462f;
+	text-shadow: 2px 2px 5px gray;
+}
+#TopNewProjectContent{
+	margin-left: 10px;
+	margin-right: 10px;
+	text-align: left;
+}
+#TopNewProjectList{
+		text-align: center;
+	font-size: 20px;
+	color: #644229;
+	width: 130px;
+	height: 23px;
+	margin: 0px;
+	padding: 5px;
+	position: relative;
+	left: 20px;
+	text-shadow: 0px 0px 10px white;
+
+}
+#TopInvite{
+	color: white;
+	text-align: center;
+	width: 400px;
+	margin-top: 30px;
+	margin-left: 40px;
+	margin-right: 3px;
+	margin-bottom: 20px;
+	padding-bottom: 30px;
+	border: solid;
+	border-left-width: 0px;
+	border-left-color: #ef741b;
+	border-bottom-width: 0px;
+	border-right-width: 0px;
+	border-top-width: 0px;
+	border-top-color: #AAAAAA;
+	border-right-color: #080880;
+	border-bottom-color: #ef741b;
+	padding-left: 8px;
+	float: left;
+	background-image: url(../img/orangeback.png);
+	background-size: 900px;
+	text-shadow: 0px 0px 5px black;
+	box-shadow: 2px 2px 10px gray;
+
+}
+#TopInviteTitle{
+	width: 300px;
+	margin-left: auto;
+	margin-right: auto;
+	font-size: 30px;
+	color: white;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	border-bottom-style: dashed;
+	border-bottom-width: 3px;
+	border-color: white;
+	text-shadow: 2px 2px 5px black;
+	
+}
+#TopInviteContent{
+	
+}
+
+
+.TopPanel{
+	
+}
+
+
 
 /*Answer End*/
 
