--- a/CSS/Top.css
+++ b/CSS/Top.css
@@ -441,12 +441,12 @@ td{
 	border-top: 0px;
 	border-left: 0px;
 	border-right: 0px;
-	border-bottom-width: 2px;
+	border-bottom-width: 0px;
 	border-bottom-color: gray;
 	margin-top: 10px;
 	margin-left: auto;
 	margin-right: auto;
-	margin-bottom: 0px;
+	margin-bottom: 20px;
 	padding: 10px;
 	background-color: #4b3423;	
 	box-shadow: 2px 2px 5px gray;
@@ -491,6 +491,7 @@ td{
 	text-shadow: 2px 2px 5px gray;
 }
 #TopClassContent{
+	text-decoration: underline;
 	margin-left: 10px;
 	margin-right: 10px;
 	text-align: left;
@@ -539,7 +540,7 @@ td{
 	width: 190px;
 	height: 310px;
 	margin-top: 30px;
-	margin-left: 30px;
+	margin-left: 60px;
 	margin-right: 3px;
 	border: solid;
 	border-left-width: 0px;
@@ -571,6 +572,7 @@ td{
 	text-shadow: 2px 2px 5px gray;
 }
 #TopAbroadContent{
+	text-decoration: underline;
 	margin-left: 10px;
 	margin-right: 10px;
 	text-align: left;
@@ -687,6 +689,7 @@ td{
 	text-shadow: 2px 2px 5px gray;
 }
 #TopCircleContent{
+	text-decoration: underline;
 	margin-left: 10px;
 	margin-right: 10px;
 	text-align: left;
@@ -721,7 +724,7 @@ td{
 	width: 190px;
 	height: 310px;
 	margin-top: 30px;
-	margin-left: 30px;
+	margin-left: 60px;
 	margin-right: 3px;
 	border: solid;
 	border-left-width: 0px;
@@ -752,12 +755,13 @@ td{
 	text-shadow: 2px 2px 5px gray;
 }
 #TopNewProjectContent{
+	text-decoration: underline;
 	margin-left: 10px;
 	margin-right: 10px;
 	text-align: left;
 }
 #TopNewProjectList{
-		text-align: center;
+	text-align: center;
 	font-size: 20px;
 	color: #644229;
 	width: 130px;
@@ -773,8 +777,8 @@ td{
 	color: white;
 	text-align: center;
 	width: 400px;
-	margin-top: 30px;
-	margin-left: 40px;
+	margin-top: 60px;
+	margin-left: 60px;
 	margin-right: 3px;
 	margin-bottom: 20px;
 	padding-bottom: 30px;
@@ -810,6 +814,95 @@ td{
 	
 }
 #TopInviteContent{
+	
+}
+
+#TopBeginner{
+	color: white;
+	text-align: center;
+	width: 440px;
+	margin-top: 30px;
+	margin-left: 40px;
+	margin-right: 3px;
+	margin-bottom: 20px;
+	padding-bottom: 30px;
+	border: solid;
+	border-left-width: 0px;
+	border-left-color: #ef741b;
+	border-bottom-width: 0px;
+	border-right-width: 0px;
+	border-top-width: 0px;
+	border-top-color: #AAAAAA;
+	border-right-color: #080880;
+	border-bottom-color: #ef741b;
+	padding-left: 8px;
+	float: right;
+	background-image: url(../img/orangeback.png);
+	background-size: 1100px;
+	text-shadow: 0px 0px 5px black;
+	box-shadow: 2px 2px 10px gray;
+
+}
+#TopBeginnerTitle{
+	width: 300px;
+	margin-left: auto;
+	margin-right: auto;
+	font-size: 30px;
+	color: white;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	border-bottom-style: dashed;
+	border-bottom-width: 3px;
+	border-color: white;
+	text-shadow: 2px 2px 5px black;
+	
+}
+#TopBeginnerContent{
+	
+}
+
+#TopRule{
+	color: #67462f;
+	text-align: center;
+	width: 440px;
+	margin-top: 30px;
+	margin-left: 40px;
+	margin-right: 3px;
+	margin-bottom: 20px;
+	border: solid;
+	border-left-width: 0px;
+	border-left-color: #ef741b;
+	border-bottom-width: 0px;
+	border-right-width: 0px;
+	border-top-width: 0px;
+	border-top-color: #AAAAAA;
+	border-right-color: #080880;
+	border-bottom-color: #ef741b;
+	padding-top: 0px;
+	padding-left: 8px;
+	padding-right: 0px;
+	padding-bottom: 30px;
+	float: right;
+	background-image: url(../img/footer-quick-links-bottom.png);
+	background-size: 475px;
+	text-shadow: 2px 2px 5px gray;
+
+}
+#TopRuleTitle{
+	width: 300px;
+	margin-left: auto;
+	margin-right: auto;
+	font-size: 30px;
+	color: #67462f;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	border-bottom-style: dashed;
+	border-bottom-width: 3px;
+	border-color: #67462f;
+	text-shadow: 2px 2px 5px gray;
+	
+}
+#TopRuleContent{
 	
 }
 
