--- a/CSS/Top.css
+++ b/CSS/Top.css
@@ -11,10 +11,10 @@ body{
 	}
 	
 #Sidebar{
-	width: 190px;
+	width: 220px;
 	height: 900px;
-	margin-top: 5px;
-	margin-left: 5px;
+	margin-top: 15px;
+	margin-left: 10px;
 	margin-right: 5px;
 	float: left;
 	border-right:solid;
@@ -26,21 +26,22 @@ body{
 }
 
 #SideContent1{
-	width: 184px;
+	width: 214px;
 	margin-top: 3px;
 	margin-left: 3px;
 	margin-right: 3px;
 	padding-bottom: 8px;
 	border-bottom: solid;
 	border-bottom-width: 2px;
-	border-bottom-color:  gray;
+	border-bottom-color:  #C6C6C6;
 }
 #SideLogo{
-	width: 184px;	
+	text-align: center;
+	width: 214px;	
 }
 #SideName{
 	text-align: center;
-	width: 155px;
+	width: 185px;
 	margin-top: 3px;
 	margin-left: 3px;
 	margin-right: 3px;
@@ -48,25 +49,25 @@ body{
 	}
 #SidePoint{
 	text-align: center;
-	width: 155px;
+	width: 185px;
 	margin-top: 3px;
 	margin-left: 3px;
 	margin-right: 3px;
 	padding-left: 8px;
 }
 #SideContent2{
-	width: 184px;
+	width: 214px;
 	margin-top: 8px;
 	margin-left: 3px;
 	margin-right: 3px;
 	padding-bottom: 8px;
 	border-bottom: solid;
 	border-bottom-width: 2px;
-	border-bottom-color:gray;
+	border-bottom-color:#C6C6C6;
 }
 #SideMypage{
 	text-align: center;
-	width: 155px;
+	width: 185px;
 	margin-top: 3px;
 	margin-left: 3px;
 	margin-right: 3px;
@@ -75,25 +76,25 @@ body{
 }
 #SideAnswer{	
 	text-align: center;
-	width: 155px;
+	width: 185px;
 	margin-top: 3px;
 	margin-left: 3px;
 	margin-right: 3px;
 	padding-left: 8px;
 }
 #SideContent3{
-	width: 184px;
+	width: 214px;
 	margin-left: 3px;
 	margin-right: 3px;
 	margin-top: 8px;
 	padding-bottom: 8px;
 	border-bottom: solid;
 	border-bottom-width: 2px;
-	border-bottom-color:gray;
+	border-bottom-color:#C6C6C6;
 }
 #SideClass{
 	text-align: center;
-	width: 155px;
+	width: 185px;
 	margin-top: 3px;
 	margin-left: 3px;
 	margin-right: 3px;
@@ -102,7 +103,7 @@ body{
 
 #SideAbroad{
 	text-align: center;
-	width: 155px;
+	width: 185px;
 	margin-top: 3px;
 	margin-left: 3px;
 	margin-right: 3px;
@@ -110,7 +111,7 @@ body{
 }
 #SideCircle{
 	text-align: center;
-	width: 155px;
+	width: 185px;
 	margin-top: 3px;
 	margin-left: 3px;
 	margin-right: 3px;
@@ -118,14 +119,14 @@ body{
 }
 #SideNewProject{
 	text-align: center;
-	width: 155px;
+	width: 185px;
 	margin-top: 3px;
 	margin-left: 3px;
 	margin-right: 3px;
 	padding-left: 8px;
 }
 #SideContent4{
-	width: 184px;
+	width: 214px;
 	margin-top: 8px;
 	margin-left: 3px;
 	margin-right: 3px;
@@ -136,7 +137,7 @@ body{
 }
 #SideRule{
 	text-align: center;
-	width: 155px;
+	width: 185px;
 	margin-top: 3px;
 	margin-left: 3px;
 	margin-right: 3px;
@@ -144,7 +145,7 @@ body{
 }
 #SideBeginner{
 	text-align: center;
-	width: 155px;
+	width: 185px;
 	margin-top: 3px;
 	margin-left: 3px;
 	margin-right: 3px;
@@ -152,7 +153,7 @@ body{
 }
 #SideOpinion{
 	text-align: center;
-	width: 155px;
+	width: 185px;
 	margin-top: 3px;
 	margin-left: 3px;
 	margin-right: 3px;
@@ -160,7 +161,7 @@ body{
 }
 #SideLogout{
 	text-align: center;
-	width: 155px;
+	width: 185px;
 	margin-top: 3px;
 	margin-left: 3px;
 	margin-right: 3px;
@@ -452,14 +453,12 @@ td{
 	box-shadow: 2px 2px 5px gray;
 }
 
-
-
 #TopClass{
 	text-align: center;
 	width: 190px;
 	height: 310px;
 	margin-top: 30px;
-	margin-left: 30px;
+	margin-left: 0px;
 	margin-right: 3px;
 	border: solid;
 	border-left-width: 0px;
@@ -468,7 +467,6 @@ td{
 	border-right-width: 0px;
 	border-top-width: 0px;
 	border-top-color: #AAAAAA;
-	border-right-color: #080880;
 	border-bottom-color: #ef741b;
 	padding-left: 8px;
 	float: left;
@@ -491,7 +489,8 @@ td{
 	text-shadow: 2px 2px 5px gray;
 }
 #TopClassContent{
-	text-decoration: underline;
+	opacity: 0.9;
+	font-style: italic;
 	margin-left: 10px;
 	margin-right: 10px;
 	text-align: left;
@@ -500,12 +499,12 @@ td{
 	text-align: center;
 	font-size: 25px;
 	color: #644229;
-	width: 50px;
+	width: 100px;
 	height: 30px;
 	margin: 10px;
 	padding: 10px;
 	position: relative;
-	left: 40px;
+	left: 15px;
 	text-shadow: 0px 0px 10px white;
 
 	
@@ -514,24 +513,24 @@ td{
 	text-align: center;
 	font-size: 25px;
 	color: #644229;
-	width: 50px;
+	width: 100px;
 	height: 30px;
 	margin: 10px;
 	padding: 10px;
 	position: relative;
-	left: 40px;
+	left: 15px;
 	text-shadow: 0px 0px 10px white;
 	}
 #TopGS{
 	text-align: center;
 	font-size: 25px;
 	color: #644229;
-	width: 50px;
+	width: 100px;
 	height: 30px;
 	margin: 10px;
 	padding: 10px;
 	position: relative;
-	left: 40px;
+	left: 15px;
 	text-shadow: 0px 0px 10px white;
 
 }
@@ -572,7 +571,8 @@ td{
 	text-shadow: 2px 2px 5px gray;
 }
 #TopAbroadContent{
-	text-decoration: underline;
+	opacity: 0.9;
+	font-style: italic;
 	margin-left: 10px;
 	margin-right: 10px;
 	text-align: left;
@@ -581,12 +581,12 @@ td{
 	text-align: center;
 	font-size: 20px;
 	color: #644229;
-	width: 90px;
+	width: 150px;
 	height: 28px;
 	margin: 0px;
 	padding: 5px;
 	position: relative;
-	left: 30px;
+	left: 5px;
 	text-shadow: 0px 0px 10px white;
 
 	
@@ -595,36 +595,36 @@ td{
 	text-align: center;
 	font-size: 20px;
 	color: #644229;
-	width: 90px;
+	width: 150px;
 	height: 28px;
 	margin: 0px;
 	padding: 5px;
 	position: relative;
-	left: 30px;
+	left: 5px;
 	text-shadow: 0px 0px 10px white;
 	}
 #TopEastAsia{
 	text-align: center;
 	font-size: 20px;
 	color: #644229;
-	width: 90px;
+	width: 150px;
 	height: 28px;
 	margin: 0px;
 	padding: 5px;
 	position: relative;
-	left: 30px;
+	left: 5px;
 	text-shadow: 0px 0px 10px white;
 }
 #TopSEAO{
 	text-align: center;
 	font-size: 20px;
 	color: #644229;
-	width: 90px;
+	width: 150px;
 	height: 28px;
 	margin: 0px;
 	padding: 5px;
 	position: relative;
-	left: 30px;
+	left: 5px;
 	text-shadow: 0px 0px 10px white;
 }
 #TopNorthAmerica{
@@ -657,7 +657,7 @@ td{
 	width: 190px;
 	height: 310px;
 	margin-top: 30px;
-	margin-left: 30px;
+	margin-left: 0px;
 	margin-right: 3px;
 	border: solid;
 	border-left-width: 0px;
@@ -689,7 +689,7 @@ td{
 	text-shadow: 2px 2px 5px gray;
 }
 #TopCircleContent{
-	text-decoration: underline;
+	opacity: 0.9;
 	color: #644229;
 	margin-left: 10px;
 	margin-right: 10px;
@@ -697,7 +697,7 @@ td{
 }
 #TopCulture{
 	text-align: center;
-	font-size: 20px;
+	font-size: 30px;
 	color: #644229;
 	width: 130px;
 	height: 23px;
@@ -709,7 +709,7 @@ td{
 }
 #TopSports{
 	text-align: center;
-	font-size: 20px;
+	font-size: 30px;
 	color: #644229;
 	width: 130px;
 	height: 23px;
@@ -756,8 +756,8 @@ td{
 	text-shadow: 2px 2px 5px gray;
 }
 #TopNewProjectContent{
+	opacity: 0.9;
 	color: #644229;
-	text-decoration: underline;
 	margin-left: 10px;
 	margin-right: 10px;
 	text-align: left;
@@ -778,9 +778,9 @@ td{
 #TopInvite{
 	color: white;
 	text-align: center;
-	width: 400px;
-	margin-top: 60px;
-	margin-left: 60px;
+	width: 460px;
+	margin-top: 20px;
+	margin-left: 40px;
 	margin-right: 3px;
 	margin-bottom: 20px;
 	padding-bottom: 30px;
@@ -794,7 +794,7 @@ td{
 	border-right-color: #080880;
 	border-bottom-color: #ef741b;
 	padding-left: 8px;
-	float: left;
+	float: right;
 	background-image: url(../img/orangeback.png);
 	background-size: 900px;
 	text-shadow: 0px 0px 5px black;
@@ -822,12 +822,12 @@ td{
 #TopBeginner{
 	color: white;
 	text-align: center;
-	width: 440px;
+	width: 460px;
 	margin-top: 30px;
 	margin-left: 40px;
 	margin-right: 3px;
 	margin-bottom: 20px;
-	padding-bottom: 30px;
+	padding-bottom: 10px;
 	border: solid;
 	border-left-width: 0px;
 	border-left-color: #ef741b;
@@ -840,7 +840,7 @@ td{
 	padding-left: 8px;
 	float: right;
 	background-image: url(../img/orangeback.png);
-	background-size: 1100px;
+	background-size: 700px;
 	text-shadow: 0px 0px 5px black;
 	box-shadow: 2px 2px 10px gray;
 
@@ -851,6 +851,7 @@ td{
 	margin-right: auto;
 	font-size: 30px;
 	color: white;
+	padding: 10px;
 	margin-top: 20px;
 	margin-bottom: 20px;
 	border-bottom-style: dashed;
@@ -866,8 +867,8 @@ td{
 #TopRule{
 	color: #67462f;
 	text-align: center;
-	width: 440px;
-	margin-top: 30px;
+	width: 460px;
+	margin-top: 20px;
 	margin-left: 40px;
 	margin-right: 3px;
 	margin-bottom: 20px;
@@ -956,46 +957,73 @@ td{
 /*AnswerClass End*/
 
 /*ClassList Start*/
-.ClassList{
-	width: 500px;
-	border: solid;
-	border-width: 0px;
-	border-left-width: 10px;
-	border-left-color: #9BBB59;
+#Classuploadimg{
+	width:200px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 20px;
+}
+.ClassImg{
+	width: 510px;
+	height: 340px;
+	margin-top: 50px;
+	position: absolute;
+	z-index: -1;
+	left:820px;
+	top: 160px;
+	position: fixed;
+	box-shadow: 2px 2px 5px black;
+	
 }
 .ClassListTitle{
 	margin-top: 30px;
-	margin-bottom: 30px;
+	margin-bottom: -100px;
 }
 .ClassName{
 	color: white;
-	font-size: 40px;
+	font-size: 50px;
 	text-shadow: 2px 2px 3px black;
 	position: relative;
 	z-index: 3;
-	top:-123px;
-	left: 15px;
-	margin-bottom: -70px;
+	top:-163px;
+	left: 30px;
+	margin-bottom: -90px;
 }
 .ClassListContent{
+	width:530px;
+	margin-top: 30px;
 	margin-bottom: -80px;
+}
+.ClassListCategorySet{
+	width: 900px;
+	box-shadow: 2px 2px 5px gray;
+	background-image: url(../img/cbb2.jpg);
 }
 .ClassListCategory{
 	color: white;
+	font-size: 25px;
 	text-shadow: 2px 2px 3px black;
 	position: relative;
 	z-index: 3;
-	top:-73px;
+	top:-90px;
 	left: 10px;
-
+}
+.ClassListCategoryimg{
+	width: 300px;
+	height: 60px;
+	position: relative;
+	left: -10px;
+	top:-10px;
+	box-shadow: 2px 2px 5px gray;
 }
 .ClassListDifferent{
+	width: 500px;
+	font-size: 20px;
 	position: relative;
-	top:-73px;
+	top:-63px;
 	left: 10px;
 
-}
-/*ClassList End*/
+}/*ClassList End*/
 
 /*Class End*/
 
@@ -1287,7 +1315,7 @@ td{
 }
 .AbroadName{
 	color: white;
-	font-size: 50px;
+	font-size: 40px;
 	text-shadow: 2px 2px 3px black;
 	position: relative;
 	z-index: 3;
@@ -1493,6 +1521,88 @@ td{
 	margin: 30px;
 	text-shadow: 2px 2px 5px gray;
 }
+
+/*ProjectList Start*/
+.ProjectList{
+	width: 500px;	
+}
+.ProjectAnswerBox{
+	text-align: center;
+	width: 400px;
+	height: 100px;
+	position: relative;
+	left: 650px;
+	top:-130px;
+}
+#Projectuploadimg{
+	width:200px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 20px;
+}
+.ProjectImg{
+	width: 510px;
+	height: 340px;
+	margin-top: 50px;
+	position: absolute;
+	z-index: -1;
+	left:820px;
+	top: 160px;
+	position: fixed;
+	box-shadow: 2px 2px 5px black;
+	
+}
+.ProjectListTitle{
+	margin-top: 30px;
+	margin-bottom: -100px;
+}
+.ProjectName{
+	color: white;
+	font-size: 50px;
+	text-shadow: 2px 2px 3px black;
+	position: relative;
+	z-index: 3;
+	top:-163px;
+	left: 30px;
+	margin-bottom: -90px;
+}
+.ProjectListContent{
+	width:530px;
+	margin-top: 30px;
+	margin-bottom: -80px;
+}
+.ProjectListCategorySet{
+	width: 530px;
+	box-shadow: 2px 2px 5px gray;
+	background-image: url(../img/cbb2.jpg);
+}
+.ProjectListCategory{
+	color: white;
+	font-size: 25px;
+	text-shadow: 2px 2px 3px black;
+	position: relative;
+	z-index: 3;
+	top:-90px;
+	left: 10px;
+}
+.ProjectListCategoryimg{
+	width: 300px;
+	height: 60px;
+	position: relative;
+	left: -10px;
+	top:-10px;
+	box-shadow: 2px 2px 5px gray;
+}
+.ProjectListDifferent{
+	width: 500px;
+	font-size: 20px;
+	position: relative;
+	top:-63px;
+	left: 10px;
+
+}
+/*NewProjectList End*/
+
 /*NewProject End*/
 
 /*Form Start*/
